[gd_scene load_steps=33 format=2]

[ext_resource path="res://Art/TAP_anim_v2/TAP_anim_v2/Animations ver2/Char5/Char5_idle_16px.png" type="Texture" id=1]
[ext_resource path="res://Art/TAP_anim_v2/TAP_anim_v2/Animations ver2/Char6/Char6_idle_16px.png" type="Texture" id=2]
[ext_resource path="res://Art/TAP_anim_v2/TAP_anim_v2/Animations ver2/Char1/Char1_idle_16px.png" type="Texture" id=3]
[ext_resource path="res://Art/TAP_anim_v2/TAP_anim_v2/Animations ver2/Char3/Char3_idle_16px.png" type="Texture" id=4]
[ext_resource path="res://Art/TAP_anim_v2/TAP_anim_v2/Animations ver2/char4/Char4_idle_16px.png" type="Texture" id=5]
[ext_resource path="res://Art/TAP_anim_v2/TAP_anim_v2/Animations ver2/Char2/Char2_idle_16px.png" type="Texture" id=6]
[ext_resource path="res://CharSelect.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Player0",
"speed": 3.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Player1",
"speed": 3.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Player2",
"speed": 3.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Player3",
"speed": 3.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Player4",
"speed": 3.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "Player5",
"speed": 3.0
} ]

[node name="CharSelect" type="Node2D"]
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="."]
margin_right = 341.0
margin_bottom = 202.0
rect_pivot_offset = Vector2( -33, 0 )

[node name="PlayerSelect" type="AnimatedSprite" parent="."]
position = Vector2( 176, 96 )
scale = Vector2( 2, 2 )
frames = SubResource( 26 )
animation = "Player0"
playing = true

[node name="Left" type="Button" parent="."]
margin_left = 128.0
margin_top = 80.0
margin_right = 152.0
margin_bottom = 106.0
text = "<"

[node name="Right" type="Button" parent="."]
margin_left = 200.0
margin_top = 80.0
margin_right = 224.0
margin_bottom = 106.0
text = ">"

[node name="Select" type="Button" parent="."]
margin_left = 144.0
margin_top = 120.0
margin_right = 211.0
margin_bottom = 146.0
text = "Select"

[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Select" to="." method="_on_Select_pressed"]
